--- a/APF.htm
+++ b/APF.htm
@@ -177,9 +177,9 @@ function topFunction() {
 			HOME
 		</a>
     <div class="dropdown-content">
-      <a href="/home.htm#AU">About Us</a>
-      <a href="/home.htm#AC">About Copyright</a>
-      <a href="/home.htm#PPAC">Privacy Policy</a>
+      <a href="/index.htm#AU">About Us</a>
+      <a href="/index.htm#AC">About Copyright</a>
+      <a href="/index.htm#PPAC">Privacy Policy</a>
     </div>
   </li>
   <li class="dropdown">
