--- a/APF.htm
+++ b/APF.htm
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<title>C programming by dark developers</title>
+<title>C Programs For Beginners by dark developers</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, user scalable=yes">
-<meta name="Keywords" content="HTML,CSS,JavaScript,SQL,PHP,jQuery,XML,DOM,Bootstrap,Python
-,Java,Web development,W3C,tutorials,programming,training,learning,quiz,primer,lessons,
-references,examples,exercises,source code,colors,demos,tips">
-<meta name="Description" content="Well organized and easy to understand Web building 
-tutorials with lots of examples of how to use HTML, CSS, JavaScript, SQL, PHP, Python,
- Bootstrap, Java and XML.">
+<meta name="Keywords" content="C programming,C programming practice,basic C programming,C,C++,basic C,C programming for beginners">
+<meta name="Description" content="Practices programs for Beginners in C Language">
 <style>
 .headerdiv {
 	margin:0;
@@ -150,7 +146,7 @@ a:active {
 		document.getElementById("datetime").innerHTML = dt.toLocaleDateString();
 	</script>
 	<br>
-	<b>A SITE DESIGNED FOR C PROGRAMMING PRACTICES</b>
+	<b>A SITE DESIGNED FOR PROGRAMMING PRACTICES</b>
 	</div>
 </div>
 <!-- header part end-->
